--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 col-xs-6 mt-4">
-                    <a class="btn btn-primary btn-lg btn-info" href="#numCampers" role="button">Reserve Campsite</a>
+                    <a class="btn btn-primary btn-lg btn-info" href="#numCampers" role="button" data-toggle="tooltip" data-placement="bottom"
+                     data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
                 </div>               
             </div>
         </div>
@@ -184,6 +185,12 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+
+    </script>
 </body>
 
 </html>
